# Piicatcher_Turkish

./: pyproject.toml
piicatcher_turkish/detectors/: TC_number.py  __init__.py  credit_card.py
