[tool.poetry]
name = "piicatcher_turkish"
version = "0.1"
description = "custom detectors"
authors = ["mat"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Topic :: Database",
        "Topic :: Software Development",
        "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.8"
spacy = "^3.4.4"
piicatcher = "^0.20.2"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
black = "^21.12b0"
mypy = "^0.910"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."piicatcher_detectors"]
tc_metadata = "piicatcher_turkish.detectors:ColumnTCDetector"
tc_datum = "piicatcher_turkish.detectors:DatumTCDetector"
credit_metadata = "piicatcher_turkish.detectors:ColumnCreditCardDetector"
credit_datum = "piicatcher_turkish.detectors:DatumCreditCardDetector"
